Breadcrumbs spacing and fix story.

--- a/docroot/themes/custom/civic/civic-library/components/03-organisms/breadcrumb/breadcrumb.scss
+++ b/docroot/themes/custom/civic/civic-library/components/03-organisms/breadcrumb/breadcrumb.scss
@@ -20,7 +20,6 @@
       margin-right: civic-space();
       display: flex;
       align-items: center;
-      white-space: nowrap;
 
       @include civic-breakpoint-upto('m') {
         display: none;
